@@ -316,7 +316,10 @@ CONFIG_DEV_NULL=y
 # CONFIG_WATCHDOG is not set
 # CONFIG_ANALOG is not set
 # CONFIG_BCH is not set
-# CONFIG_INPUT is not set
+CONFIG_INPUT=y
+# CONFIG_INPUT_TSC2007 is not set
+# CONFIG_INPUT_ADS7843E is not set
+# CONFIG_INPUT_STMPE811 is not set
 # CONFIG_LCD is not set
 CONFIG_MMCSD=y
 CONFIG_MMCSD_NSLOTS=1
@@ -364,7 +367,7 @@ CONFIG_HIDKBD_STACKSIZE=1024
 CONFIG_HIDKBD_BUFSIZE=64
 CONFIG_HIDKBD_NPOLLWAITERS=2
 # CONFIG_HIDKBD_RAWSCANCODES is not set
-# CONFIG_HIDKBD_ENCODED is not set
+CONFIG_HIDKBD_ENCODED=y
 # CONFIG_HIDKBD_ALLSCANCODES is not set
 # CONFIG_HIDKBD_NODEBOUNCE is not set
 # CONFIG_WIRELESS is not set
@@ -425,6 +428,10 @@ CONFIG_MM_REGIONS=2
 #
 # Library Routines
 #
+
+#
+# Standard C Library Options
+#
 CONFIG_STDIO_BUFFER_SIZE=256
 CONFIG_STDIO_LINEBUFFER=y
 CONFIG_NUNGET_CHARS=2
@@ -442,6 +449,11 @@ CONFIG_ARCH_LOWPUTC=y
 CONFIG_LIB_SENDFILE_BUFSIZE=512
 # CONFIG_ARCH_ROMGETC is not set
 # CONFIG_ARCH_OPTIMIZED_FUNCTIONS is not set
+
+#
+# Non-standard Helper Functions
+#
+CONFIG_LIB_KBDCODEC=y
 
 #
 # Basic CXX Support
@@ -473,6 +485,10 @@ CONFIG_LIB_SENDFILE_BUFSIZE=512
 # CONFIG_EXAMPLES_HELLOXX is not set
 # CONFIG_EXAMPLES_JSON is not set
 CONFIG_EXAMPLES_HIDKBD=y
+CONFIG_EXAMPLES_HIDKBD_DEFPRIO=50
+CONFIG_EXAMPLES_HIDKBD_STACKSIZE=1024
+CONFIG_EXAMPLES_HIDKBD_DEVNAME="/dev/kbda"
+CONFIG_EXAMPLES_HIDKBD_ENCODED=y
 # CONFIG_EXAMPLES_KEYPADTEST is not set
 # CONFIG_EXAMPLES_IGMP is not set
 # CONFIG_EXAMPLES_LCDRW is not set
