@@ -3,6 +3,8 @@
 # see misc/tools/kconfig-language.txt.
 #
 
+comment "Standard C Library Options"
+
 config STDIO_BUFFER_SIZE
 	int "C STDIO buffer size"
 	default 64
@@ -273,3 +275,29 @@ config ARCH_BZERO
 		of bzero().
 
 endif
+
+comment "Non-standard Helper Functions"
+
+config LIB_KBDCODEC
+	bool "Keyboard CODEC"
+	default y
+	---help---
+		In NuttX, a keyboard/keypad driver is simply a character driver that
+		may have an (optional) encoding/decoding layer on the data returned
+		by the character driver. A keyboard may return simple text data
+		(alphabetic, numeric, and punctuaction) or control characters
+		(enter, control-C, etc.).  We can think about this the normal
+		"in-band" keyboard data stream.  However, in addition, most
+		keyboards support actions that cannot be represented as text data.
+		Such actions include things like cursor controls (home, up arrow,
+		page down, etc.), editing functions (insert, delete, etc.), volume
+		controls, (mute, volume up, etc.) and other special functions.  We
+		can think about this as special, "out-of-band" keyboard commands.
+		In this case, some special encoding may be required to multiplex
+		the in-band text data and out-of-band command streams.
+
+		This option enables the functions that implement the encoding and
+		decoding of keyboard data.  These are the interfaces prototyped in
+		include/nuttx/input/kbd_codec.h.  While not correctly a part of
+		the C library, it is included here because the decoding side of this
+		interface must be accessible by end user programs.
